--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,6 @@
     { "src": "index.js", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "index.js" },
-    { "src": "/", "dest": "index.js" }
+    { "src": "/(.*)", "dest": "index.js" }
   ]
 }
