--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,10 @@
   "builds": [
     { "src": "index.js", "use": "@vercel/node" }
   ],
-  "routes": [
-    { "src": "/(.*)", "dest": "index.js" }
-  ]
+"routes": [
+  {
+    "src": "/api(.*)",
+    "dest": "index.js"
+  }
+]
 }
