--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,16 @@
 {
   "version": 2,
   "builds": [
-    { "src": "index.js", "use": "@vercel/node" }
+    { "src": "index.js", "use": "@vercel/node" },
+    {
+      "src": "src/**/*.js",
+      "use": "@vercel/static"
+    }
   ],
-"routes": [
-  {
-    "src": "/(.*)",
-    "dest": "index.js"
-  }
-]
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/"
+    }
+  ]
 }
