--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "backenddashboad",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
